--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -22,11 +22,11 @@ ext {
 	sorcerVersion = version
 
 	groovyVersion = "2.3.8"
-	//rioVersion = "5.1.1"
-    rioVersion = "5.0-M5S0"
+	rioVersion = "5.1.1"
+    //rioVersion = "5.0-M5S0"
 	riverVersion = "2.2.2"
 	slf4jVersion = "1.7.7"
-	blitzVersion = "2.1.7"
+	blitzVersion = "2.3"
 	lockmgrVersion = "2.1.7"
 	jeVersion = "5.0.104"
 	junitVersion = "4.8.2"
@@ -39,8 +39,8 @@ ext {
 	v_jini = "2.2.2"
     v_blitz = "2.3"
 	v_sleepycat = "5.0.104"
-    v_rio = "5.0-M5S0"
-    //v_rio = "5.1.1"
+    //v_rio = "5.0-M5S0"
+    v_rio = "5.1.1"
     v_groovy = "2.3.8"
     v_sigar = "1.6.4-3"
 	v_lockmgr = "0.2-3"
