--- a/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
+++ b/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
@@ -30,7 +30,7 @@ org.dancres.blitz {
 	home = System.getProperty(SorcerConstants.S_BLITZ_HOME, "${sorcer.home}/databases");
 
     initialAttrs = new Entry[] {
-        UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIFrameFactory(new URL("artifact:org.sorcersoft.blitz/blitz-ui/${v.blitz}"), "org.dancres.blitz.tools.dash.DashBoardFrame")),
+        UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIFrameFactory(new URL("artifact:org.sorcersoft.blitz/blitz-ui/2.3"), "org.dancres.blitz.tools.dash.DashBoardFrame")),
 		new Comment("user:" + System.getProperty("user.name")),
         new Comment("Host: " + SorcerEnv.getHostName())
     };
