--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
-apply from: file('gradle/libraries.gradle')
-
 ext {
   enclaveRepo = "10.131.7.138:7001"
   enclave = InetAddress.getLocalHost().getHostAddress().startsWith("10.131")
 }
 
 allprojects  {
-  //apply plugin: 'maven'
-
   group = 'org.sorcersoft.sorcer'
   version = '1.1-SNAPSHOT'
 }
+
+apply from: file('gradle/libraries.gradle')
 
 subprojects {
   if (project.name != "examples" && project.name != "sorcer-int-tests") {
@@ -24,13 +22,24 @@ subprojects {
       // apply from: file("${rootProject.projectDir.path}/gradle/bootme.gradle")
 
       publishing {
-        publications {
-          mavenJava(MavenPublication) {
-            from components.java
+          publications {
+              mavenJava(MavenPublication) {
+                  from components.java
+              }
           }
-        }
       }
+
+        jar.dependsOn('generatePomFileForMavenJavaPublication')
+
+        jar {
+            into("META-INF/maven/$project.group/$project.name") {
+                from "build/publications/mavenJava/pom-default.xml"
+                rename ".*", "pom.xml"
+            }
+        }
+
     }
+
 
     repositories {
       mavenLocal()
@@ -39,7 +48,6 @@ subprojects {
       maven { url "http://repo.maven.apache.org/maven2" }
       maven { url "http://mvn.sorcersoft.com/content/groups/public" }
     }
-
 
   }
   
