--- a/sos-providers/logger/logger-platform/build.gradle
+++ b/sos-providers/logger/logger-platform/build.gradle
@@ -7,14 +7,6 @@ dependencies {
     compile group: 'com.google.inject.extensions', name: 'guice-multibindings', version:'4.0-beta4'
     compile group: 'org.apache.river', name: 'start', version:riverVersion
   testCompile project(':tools:sorcer-junit')
-    compile(group: 'com.google.inject', name: 'guice', version:'4.0-beta4') {
-       /* This dependency was originally in the Maven provided scope, but the project was not of type war.
-       This behavior is not yet supported by Gradle, so this dependency has been converted to a compile dependency.
-       Please review and delete this closure when resolved. */
-    }
-    compile(group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.13') {
-       /* This dependency was originally in the Maven provided scope, but the project was not of type war.
-       This behavior is not yet supported by Gradle, so this dependency has been converted to a compile dependency.
-       Please review and delete this closure when resolved. */
-    }
+    provided(group: 'com.google.inject', name: 'guice', version:'4.0-beta4')
+    provided(group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.13')
 }
