--- a/sos/platform/sorcer-boot-rio/build.gradle
+++ b/sos/platform/sorcer-boot-rio/build.gradle
@@ -1,11 +1,6 @@
 
 description = 'SORCER :: booter :: Rio'
 dependencies {
-  //providedCompile project(':tools:sos-boot')
-    compile project(':tools:sos-boot')
-    compile(group: 'org.rioproject', name: 'rio-lib', version:rioVersion) {
-       /* This dependency was originally in the Maven provided scope, but the project was not of type war.
-       This behavior is not yet supported by Gradle, so this dependency has been converted to a compile dependency.
-       Please review and delete this closure when resolved. */
-    }
+    provided project(':tools:sos-boot')
+    provided(group: 'org.rioproject', name: 'rio-lib', version:rioVersion)
 }
