--- a/tests/int-tests/build.gradle
+++ b/tests/int-tests/build.gradle
@@ -12,6 +12,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version:junitVersion
     testCompile group: 'org.slf4j', name: 'jul-to-slf4j', version:slf4jVersion
   testCompile project(':sorcer-rio:sorcer-rio-config')
-  compile project(':tests:ju-arithmetic:ju-arithmetic-prv')
-  //providedCompile project(':tests:ju-arithmetic:ju-arithmetic-prv')
+  provided  project(':tests:ju-arithmetic:ju-arithmetic-prv')
 }
