--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -55,4 +55,5 @@ ext {
     v_maven = "3.1.1"
 
     sorcerDistHome = "${rootProject.projectDir.path}/distribution/build/sorcer-$version"
+    rioHome = "${rootProject.projectDir.path}/distribution/build/sorcer-$version/rio-$rioVersion"
 }
