--- a/sos-providers/logger/logger-cfg/build.gradle
+++ b/sos-providers/logger/logger-cfg/build.gradle
@@ -5,3 +5,15 @@ dependencies {
   compile project(':sos-providers:logger:logger-prv')
   compile project(':sos-providers:logger:logger-sui')
 }
+
+jar {
+    manifest {
+        attributes(
+                "Implementation-Title": project.name,
+                "Implementation-Version": version,
+                "OAR-OperationalString" : "opstring.groovy",
+                "OAR-Name" : "LoggerBoot",
+                "OAR-Version" : project.version,
+                "OAR-Activation" : "Automatic")
+    }
+}
