--- a/tests/par-model/par-model-cfg/build.gradle
+++ b/tests/par-model/par-model-cfg/build.gradle
@@ -3,3 +3,15 @@ description = 'SORCER OS :: int tests :: par-model :: config'
 dependencies {
   compile project(':tests:par-model:par-model-prv')
 }
+
+jar {
+    manifest {
+        attributes(
+                "Implementation-Title": project.name,
+                "Implementation-Version": version,
+                "OAR-OperationalString" : "opstring.groovy",
+                "OAR-Name" : "ParmodelBoot",
+                "OAR-Version" : project.version,
+                "OAR-Activation" : "Automatic")
+    }
+}
